# northwind-expense-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  render.yaml
backend/: ingest_policies.py  pyproject.toml  requirements.txt  seed_employees.py  smoke_test_backend.py
backend/app/: main.py
backend/app/api/v1/: router.py  serializers.py
backend/app/api/v1/routes/: employees.py  policy.py  receipts.py  reviews.py  submissions.py  verdicts.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  employee.py  policy.py  receipt.py  submission.py  verdict.py
backend/app/schemas/: __init__.py  employee.py  policy.py  receipt.py  submission.py  verdict.py
backend/app/services/: ai_reviewer.py  anthropic_client.py  receipt_extractor.py  retrieval.py
frontend/: .env.local.example  Dockerfile  next.config.mjs  next.config.ts  package-lock.json  package.json
frontend/public/: serve.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/policy/: page.tsx
frontend/src/app/submissions/[id]/: SubmissionDetailClient.tsx  page.tsx
frontend/src/components/: Modal.tsx  Nav.tsx  OverrideModal.tsx  ReceiptCard.tsx  Spinner.tsx  States.tsx  StatusBadge.tsx
frontend/src/lib/: api.ts  format.ts  status.ts
frontend/src/lib/supabase/: server.ts
frontend/src/types/: index.ts
supabase/: config.toml
supabase/migrations/: 001_enable_extensions.sql  002_initial_schema.sql  003_northwind_schema.sql  004_review_vocabulary.sql  005_policy_chunks_hnsw_index.sql
(+1 files in other folders)
